--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
+    "parcel": "^2.10.3",
     "prettier": "^3.1.0",
     "typescript": "^5"
   }
