--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.2",
-    "@gib-ui/core": "^0.0.33",
+    "@gib-ui/core": "^0.0.38",
     "@gib-ui/icons": "^0.0.4",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
-    "@types/webpack": "^5.28.5",
     "axios": "^1.6.2",
     "lottie-react": "^2.4.0",
     "negotiator": "^0.6.3",
-    "next": "14.0.3",
+    "next": "^14.0.4",
+    "node": "^21.2.0",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-redux": "^9.0.4",
+    "sass": "^1.69.5",
     "universal-cookie": "^6.1.1",
     "yup": "^1.3.2"
   },
@@ -56,7 +57,6 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
-    "parcel": "^2.10.3",
     "prettier": "^3.1.0",
     "typescript": "^5"
   }
